--- a/application-management/src/main/resources/application.properties
+++ b/application-management/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=applicationManagement
 server.port=8089
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/applicationManagement_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/applicationManagement_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&maxAllowedPacket=52428800
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
@@ -16,3 +16,12 @@ spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+### FILE UPLOAD SETTINGS (for Base64 files) ###
+# Allow larger request size for Base64 encoded files
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+# Increase maximum HTTP POST size
+server.tomcat.max-http-post-size=52428800
+# Increase maximum request header size
+server.max-http-request-header-size=52428800
