--- a/docker-compose-devops.yml
+++ b/docker-compose-devops.yml
@@ -16,6 +16,7 @@ services:
       - mysql-data:/var/lib/mysql
     networks:
       - job-app-network
+    restart: always
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
@@ -37,7 +38,7 @@ services:
       - "8089:8089"
     networks:
       - job-app-network
-    restart: unless-stopped
+    restart: always
 
   # Frontend (React + Nginx)
   frontend:
@@ -49,7 +50,22 @@ services:
       - "80:80"
     networks:
       - job-app-network
-    restart: unless-stopped
+    restart: always
+
+  # Jenkins CI/CD
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
+    user: root
+    ports:
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins-data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - job-app-network
+    restart: always
 
   # SonarQube for Code Quality
   sonarqube:
@@ -65,7 +81,7 @@ services:
       - sonarqube-logs:/opt/sonarqube/logs
     networks:
       - job-app-network
-    restart: unless-stopped
+    restart: always
 
   # Nexus Repository Manager
   nexus:
@@ -77,7 +93,7 @@ services:
       - nexus-data:/nexus-data
     networks:
       - job-app-network
-    restart: unless-stopped
+    restart: always
 
 networks:
   job-app-network:
@@ -85,6 +101,7 @@ networks:
 
 volumes:
   mysql-data:
+  jenkins-data:
   sonarqube-data:
   sonarqube-extensions:
   sonarqube-logs:
