--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - mysql-data:/var/lib/mysql
     networks:
       - job-app-network
+    restart: always
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
@@ -37,7 +38,7 @@ services:
       - "8089:8089"
     networks:
       - job-app-network
-    restart: unless-stopped
+    restart: always
 
   # Frontend (React + Nginx)
   frontend:
@@ -49,7 +50,7 @@ services:
       - "80:80"
     networks:
       - job-app-network
-    restart: unless-stopped
+    restart: always
 
 networks:
   job-app-network:
