--- a/application-management/.dockerignore
+++ b/application-management/.dockerignore
@@ -1,10 +1,50 @@
+# Maven
 target/
+!target/*.jar
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# IDE
+.idea/
+.vscode/
+*.iml
+*.ipr
+*.iws
+.project
+.classpath
+.settings/
+.metadata/
+
+# Logs
+*.log
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Git
 .git/
 .gitignore
+.gitattributes
+
+# Documentation
+README.md
 *.md
-.mvn/
-mvnw
-mvnw.cmd
-.idea/
-*.iml
-.vscode/
+
+# Tests
+src/test/
+
+# Other
+.env
+.env.local
+*.swp
+*.swo
+*~
