--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,14 +1,46 @@
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build
 dist/
+build/
+.cache/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Git
 .git/
 .gitignore
-*.md
+.gitattributes
+
+# Environment
 .env
 .env.local
 .env.development
+.env.test
 .env.production
-.vscode/
-.idea/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+
+# Testing
+coverage/
+.nyc_output/
+
+# Documentation
+README.md
+*.md
+
+# Misc
+*.log
+.eslintcache
