--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,40 @@
-# Multi-stage build for React frontend
+# Multi-stage build for React Frontend
 
 # Stage 1: Build
-FROM node:18-alpine AS build
+FROM node:20-alpine AS build
 WORKDIR /app
+
+# Copy package files
 COPY package*.json ./
-RUN npm ci
+
+# Install dependencies
+RUN npm ci --only=production
+
+# Copy source code
 COPY . .
+
+# Build for production
 RUN npm run build
 
-# Stage 2: Runtime with Nginx
+# Stage 2: Production with Nginx
 FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+WORKDIR /usr/share/nginx/html
+
+# Remove default nginx content
+RUN rm -rf ./*
+
+# Copy built app from build stage
+COPY --from=build /app/dist .
+
+# Copy custom nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
 EXPOSE 80
 
-# Start Nginx
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+    CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
+
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
