Configure Actuator to allow public access to health endpoint

--- a/application-management/src/main/resources/application.properties
+++ b/application-management/src/main/resources/application.properties
@@ -25,3 +25,10 @@ spring.servlet.multipart.max-request-size=50MB
 server.tomcat.max-http-post-size=52428800
 # Increase maximum request header size
 server.max-http-request-header-size=52428800
+
+### ACTUATOR SETTINGS ###
+# Expose health endpoint
+management.endpoints.web.exposure.include=health,info,prometheus
+# Allow unauthenticated access to health endpoint
+management.endpoint.health.show-details=always
+management.health.defaults.enabled=true
