--- a/monitoring/grafana-dashboards.yml
+++ b/monitoring/grafana-dashboards.yml
@@ -1,12 +1,13 @@
 apiVersion: 1
 
 providers:
-  - name: 'Default'
+  - name: 'Job Manager Dashboards'
     orgId: 1
-    folder: ''
+    folder: 'Monitoring'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
     allowUiUpdates: true
     options:
       path: /etc/grafana/provisioning/dashboards
+      foldersFromFilesStructure: false
